--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="col-md-8 col-md-offset-2">
             <div class="about-text">
               <p>
-                I graduated form Kharazmi University of tehran in 2019 with a
+                I graduated from Kharazmi University of tehran in 2019 with a
                 B.C in Atomic physics with full scholarship. I was working with
                 Dr.Vahedi on Ads/CFT correspondance when i introduced to
                 entanglement and quantum information theory. I was wrestling for
