--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
             <h4>Origin</h4>
           </div>
           <div class="col-md-4 col-sm-6 skill">
-            <span class="chart" data-percent="70">
+            <span class="chart" data-percent="92">
               <span class="percent">70</span>
             </span>
-            <h4>Toeffl</h4>
+            <h4>TOEFL</h4>
           </div>
           <div class="col-md-4 col-sm-6 skill">
             <span class="chart" data-percent="65">
               <span class="percent">65</span>
             </span>
-            <h4>GRE Subject</h4>
+            <h4>Git</h4>
           </div>
         </div>
       </div>
