--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/navid-kazemi-08514a172/"><i class="fa fa-linkedin"></i></a>
               </li>
             </ul>
           </div>
