--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 <a href="#"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/NavidKazemiSeresht"><i class="fa fa-github"></i></a>
               </li>
           
               <li>
