--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 tehran with full scholarship in 2019 and my average grade is
                 17.97/20 until the 4th semester. I am working with Dr.Ebrahim on
                 Quantum Information Exchange Between Subsystems by Ads/CFT
-                correspondance.I started learning mathematica, python, html,
+                correspondance. I started learning mathematica, python, html,
                 javascript, CSS and nodejs in my free time and I do sports and
                 play guitar whenever i get the chance.
               </p>
@@ -231,9 +231,9 @@
                   <div class="timeline-body">
                     <p>
                       My thesis is about Quantum Information Exchange In
-                      d-dimensional CFTs which is dual to Ads Blackhole.im
+                      d-dimensional CFTs which is dual to Ads Blackhole. I am
                       trying to find the difference between Quantum Information
-                      exchange rate in ground states and excited states and
+                      exchange rate in the ground states and the excited states and
                       check them by quantum complexity.
                     </p>
                   </div>
@@ -299,7 +299,7 @@
                   </div>
                   <div class="timeline-body">
                     <p>
-                      I had a project about 3D printers and various ways they
+                      I had a project about 3D printers and various methods they
                       use. My supervisor was Dr.heydari.
                     </p>
                   </div>
