--- a/index.html
+++ b/index.html
@@ -129,23 +129,23 @@
           <div class="col-md-8 col-md-offset-2">
             <div class="about-text">
               <p>
-                I graduated from Kharazmi University of tehran in 2019 with a
-                B.C in Atomic physics with full scholarship. I was working with
-                Dr.Vahedi on Ads/CFT correspondance when i introduced to
-                entanglement and quantum information theory. I was wrestling for
-                kharazmi University team and won the silver medal in Greco-Roman
-                style wrestling in wrestling competiton of universities of
-                tehran.
+                I graduated from the Kharazmi University of Tehran in 2019 with a
+                B.C in Atomic physics with a full scholarship. I was working with
+                Dr.Vahedi on Ads/CFT correspondence when I introduced to
+                entanglement and quantum information theory. I was wrestling for the
+                Kharazmi University team and won the silver medal in Greco-Roman
+                style wrestling in wrestling competition of universities of
+                Tehran.
               </p>
               <p>
-                I became the 85th rank in nationwide M.Sc. entrance exam in
-                2019. I accepted at particle physics department of university of
-                tehran with full scholarship in 2019 and my average grade is
+                I became the 85th rank in the nationwide M.Sc. entrance exam in
+                2019. I accepted at the particle physics department of the University of
+                Tehran with a full scholarship in 2019 and my average grade is
                 17.97/20 until the 4th semester. I am working with Dr.Ebrahim on
                 Quantum Information Exchange Between Subsystems by Ads/CFT
-                correspondance. I started learning mathematica, python, html,
-                javascript, CSS and nodejs in my free time and I do sports and
-                play guitar whenever i get the chance.
+                correspondence. I started learning Mathematica, python, HTML,
+                javascript, CSS and Nodejs in my free time and I do sports and
+                play guitar whenever I get the chance.
               </p>
               <p class="text-center">
                 <a class="btn btn-primary" href="cv/Navid_s_CV_.pdf"
