--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
               </p>
               <p>
                 I became the 85th rank in the nationwide M.Sc. entrance exam in
-                2019. I accepted at the particle physics department of the University of
+                2019. I was accepted at the particle physics department of the University of
                 Tehran with a full scholarship in 2019 and my average grade is
                 17.97/20 until the 4th semester. I am working with Dr.Ebrahim on
                 Quantum Information Exchange Between Subsystems by Ads/CFT
                 correspondence. I started learning Mathematica, python, HTML,
-                javascript, CSS and Nodejs in my free time and I do sports and
+                javascript, CSS, and Nodejs in my free time and I do sports and
                 play guitar whenever I get the chance.
               </p>
               <p class="text-center">
