--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
               <li>
                 <div class="timeline-image">
                   <h4>
-                    Feb 2021 <br />
+                    Present <br />
                     - <br />
-                    Present
+                    Feb 2021
                   </h4>
                 </div>
                 <div class="timeline-panel">
@@ -244,7 +244,7 @@
                   <h4>
                     Nov 2019 <br />
                     - <br />
-                    Oct 2021
+                    Nov 2021
                   </h4>
                 </div>
                 <div class="timeline-panel">
@@ -265,9 +265,9 @@
               <li>
                 <div class="timeline-image">
                   <h4>
-                    Nov 2019 <br />
+                    Dec 2018 <br />
                     - <br />
-                    Dec 2019
+                    Nov 2018
                   </h4>
                 </div>
                 <div class="timeline-panel">
@@ -284,12 +284,32 @@
                   </div>
                 </div>
               </li>
+                  <li>
+                <div class="timeline-image">
+                  <h4>
+                    Nov 2018 <br />
+                    - <br />
+                    Sep 2018
+                  </h4>
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Kharazmi University</h4>
+                    <h4 class="subheading">Collision Stimulation</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                     Me and Tow of my classmates, launch a collision stimulation of two partciles by using pythonin our applied computational physics class.
+                    </p>
+                  </div>
+                </div>
+              </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>
-                    Nov 201 <br />
+                    Nov 2018 <br />
                     - <br />
-                    Jan 2013
+                    Oct 2018
                   </h4>
                 </div>
                 <div class="timeline-panel">
