--- a/index.html
+++ b/index.html
@@ -284,26 +284,7 @@
                   </div>
                 </div>
               </li>
-                  <li>
-                <div class="timeline-image">
-                  <h4>
-                    Nov 2018 <br />
-                    - <br />
-                    Sep 2018
-                  </h4>
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Kharazmi University</h4>
-                    <h4 class="subheading">Collision Stimulation</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p>
-                     Me and Tow of my classmates, launch a collision stimulation of two partciles by using pythonin our applied computational physics class.
-                    </p>
-                  </div>
-                </div>
-              </li>
+                
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>
@@ -325,26 +306,42 @@
                   </div>
                 </div>
               </li>
-              <li>
+                <li>
                 <div class="timeline-image">
                   <h4>
-                    Oct 2018 <br />
+                    Nov 2018 <br />
                     - <br />
-                    Dec 2018
+                    Sep 2018
                   </h4>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>Kharazmi University</h4>
-                    <h4 class="subheading">
-                      High pass filters in electric circuits
-                    </h4>
+                    <h4 class="subheading">Collision Stimulation</h4>
                   </div>
                   <div class="timeline-body">
                     <p>
-                      I investigate the high pass lters and the role of
-                      transistors in them and their application in electric
-                      circuits. My supervisor was Dr.Bahar
+                     Me and Tow of my classmates, launch a collision stimulation of two partciles by using pythonin our applied computational physics class.
+                    </p>
+                  </div>
+                </div>
+              </li>
+      <li>
+                <div class="timeline-image">
+                  <h4>
+                    Mar 2018 <br />
+                    - <br />
+                    Feb 2018
+                  </h4>
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Kharazmi University</h4>
+                    <h4 class="subheading">High pass filters in electric circuits</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                     I investigate the high pass lters and the role of transistors in them and their application in electric circuits. My supervisor was Dr.Bahar
                     </p>
                   </div>
                 </div>
