--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>
-                    Nov 2019 <br />
+                    Nov 2021 <br />
                     - <br />
-                    Nov 2021
+                    Oct 2019
                   </h4>
                 </div>
                 <div class="timeline-panel">
@@ -327,6 +327,7 @@
                 </div>
               </li>
       <li>
+               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>
                     Mar 2018 <br />
