--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                   <div class="timeline-body">
                     <p>
                       I had the chance to give a lecture at my Spectroscopy
-                      class when i was getting My bachlor degree at Kharazmi
+                      class when I was getting My bachlor degree at Kharazmi
                       University.
                     </p>
                   </div>
@@ -321,7 +321,7 @@
                   </div>
                   <div class="timeline-body">
                     <p>
-                     Me and Tow of my classmates, launch a collision stimulation of two partciles by using python in our applied computational physics class.
+                     Me and Two of my classmates, launch a collision stimulation of two partciles by using python in our applied computational physics class.
                     </p>
                   </div>
                 </div>
