--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <li><a class="page-scroll" href="#about">About</a></li>
               <li><a class="page-scroll" href="#skills">Skills</a></li>
               <li>
-                <a class="page-scroll" href="cv/Navid_s_CV_.pdf">CV</a>
+                <a class="page-scroll" href="cv/CV.pdf">CV</a>
               </li>
               <li><a class="page-scroll" href="#Projects">Projects</a></li>
               <li><a class="page-scroll" href="#contact">Contact</a></li>
