--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 play guitar whenever I get the chance.
               </p>
               <p class="text-center">
-                <a class="btn btn-primary" href="cv/Navid_s_CV_.pdf"
+                <a class="btn btn-primary" href="cv/CV.pdf"
                   ><i class="fa fa-download"></i> Download CV</a
                 >
               </p>
