--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
-      Navid Kazemi - M.Sc Student in Quantum Information Theory and Ph.D
+      Navid Kazemi - Ph.D
       Candidate
     </title>
     <meta
       name="description"
-      content="Ph.D Candidate,Quantum entanglement,Quantum Information,Quantum computation"
+      content="Ph.D Candidate,Navid,Navid Kazemi,Navid Kazemiseresht,Quantum entanglement,Quantum Information,Quantum computation"
     />
     <meta name="auther" content="Navid Kazemi" />
 
@@ -231,8 +231,8 @@
                   <div class="timeline-body">
                     <p>
                       My thesis is about Quantum Information Exchange In
-                      d-dimensional CFTs which is dual to Ads Blackhole. I am
-                      trying to find the difference between Quantum Information
+                      d-dimensional CFTs which is dual to SAdS Blackhole. I have
+                      tried to find the difference between Quantum Information
                       exchange rate in the ground states and the excited states and
                       check them by quantum complexity.
                     </p>
@@ -254,8 +254,8 @@
                   </div>
                   <div class="timeline-body">
                     <p>
-                      Me and Dr.Vahedi at Uinversity Of Kahrazmi with Our friend
-                      Mobin Shakeri at UBC Started to write a papaer about
+                      Dr.Vahedi and I at Uinversity Of Kahrazmi with Our friend
+                      Mobin Shakeri at UBC worked on a paper about
                       Holographic Chiral effect and Non-Equilibrium Critical
                       Phenomena.
                     </p>
@@ -342,7 +342,7 @@
                   </div>
                   <div class="timeline-body">
                     <p>
-                     I investigate the high pass lters and the role of transistors in them and their application in electric circuits. My supervisor was Dr.Bahar
+                     I investigated the high pass filters and the role of transistors in them and their application in electric circuits. My supervisor was Dr.Bahar
                     </p>
                   </div>
                 </div>
