--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
-      Navid Kazemi - Ph.D
-      Candidate
+      Navid Kazemi - Ph.D Candidate
     </title>
     <meta
       name="description"
