--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="intro-text">
               <h1>Navid Kazemi</h1>
               <p>
-                M.Sc Student in Quantum Information Theory and Ph.D Candidate
+                 Ph.D Candidate
               </p>
               <a href="#about" class="btn btn-default btn-lg page-scroll"
                 >About Me</a
