--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
     <meta
       name="description"
-      content="Ph.D Candidate,Navid,Navid Kazemi,Navid Kazemiseresht,Quantum entanglement,Quantum Information,Quantum computation"
+      content="Ph.D Candidate, Navid, Navid Kazemi, Navid Kazemiseresht, Quantum entanglement, Quantum Information, Quantum computation"
     />
     <meta name="auther" content="Navid Kazemi" />
 
@@ -67,7 +67,7 @@
             <div class="intro-text">
               <h1>Navid Kazemi</h1>
               <p>
-                 Ph.D Candidate
+                 Ph.D. Candidate
               </p>
               <a href="#about" class="btn btn-default btn-lg page-scroll"
                 >About Me</a
@@ -133,7 +133,7 @@
                 Dr.Vahedi on Ads/CFT correspondence when I introduced to
                 entanglement and quantum information theory. I was wrestling for the
                 Kharazmi University team and won the silver medal in Greco-Roman
-                style wrestling in wrestling competition of universities of
+                style wrestling in wrestling competitions at universities of
                 Tehran.
               </p>
               <p>
@@ -142,8 +142,8 @@
                 Tehran with a full scholarship in 2019 and my average grade is
                 17.97/20 until the 4th semester. I am working with Dr.Ebrahim on
                 Quantum Information Exchange Between Subsystems by Ads/CFT
-                correspondence. I started learning Mathematica, python, HTML,
-                javascript, CSS, and Nodejs in my free time and I do sports and
+                Correspondence. I started learning Mathematica, Python, HTML,
+                Javascript, CSS, and Nodejs in my free time and I do sports and
                 play guitar whenever I get the chance.
               </p>
               <p class="text-center">
@@ -217,9 +217,31 @@
               <li>
                 <div class="timeline-image">
                   <h4>
-                    Present <br />
+                    Sep 2022 <br />
                     - <br />
                     Feb 2021
+                  </h4>
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>QWorld Organisation</h4>
+                    <h4 class="subheading">VQE Project</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                      The aim of this project is to calculate the bond length and energy of the ground state (and in the next
+                      phases, the energy of the excited states) of the system by considering the desired Hamiltonian and the
+                      parameters of the quantum circuit and the initial state.
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <h4>
+                    Nov 2021 <br />
+                    - <br />
+                    Oct 2019
                   </h4>
                 </div>
                 <div class="timeline-panel">
