--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   </div>
                   <div class="timeline-body">
                     <p>
-                      The aim of this project is to calculate the bond length and energy of the ground state (and in the next
+                      The aim of this project was to calculate the bond length and energy of the ground state (and in the next
                       phases, the energy of the excited states) of the system by considering the desired Hamiltonian and the
                       parameters of the quantum circuit and the initial state.
                     </p>
