--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             class="collapse navbar-collapse navbar-right navbar-main-collapse"
           >
             <ul class="nav navbar-nav">
-              <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+              <!-- Hidden li included to remove the active class from about link when scrolled up past about section -->
               <li class="hidden"><a href="#page-top"></a></li>
               <li><a class="page-scroll" href="#about">About</a></li>
               <li><a class="page-scroll" href="#skills">Skills</a></li>
@@ -275,9 +275,9 @@
                   </div>
                   <div class="timeline-body">
                     <p>
-                      Dr.Vahedi and I at Uinversity Of Kahrazmi with Our friend
+                      Dr.Vahedi and I at the University Of Kahrazmi with Our friend
                       Mobin Shakeri at UBC worked on a paper about
-                      Holographic Chiral effect and Non-Equilibrium Critical
+                      Holographic Chiral Effect and Non-Equilibrium Critical
                       Phenomena.
                     </p>
                   </div>
@@ -294,12 +294,12 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>Kharazmi University</h4>
-                    <h4 class="subheading">Soectroscopy Project</h4>
+                    <h4 class="subheading">Spectroscopy Project</h4>
                   </div>
                   <div class="timeline-body">
                     <p>
-                      I had the chance to give a lecture at my Spectroscopy
-                      class when I was getting My bachlor degree at Kharazmi
+                      I had the chance to give a lecture on my Spectroscopy
+                      class when I was getting My bachelor's degree at Kharazmi
                       University.
                     </p>
                   </div>
@@ -322,7 +322,7 @@
                   <div class="timeline-body">
                     <p>
                       I had a project about 3D printers and various methods they
-                      use. My supervisor was Dr.heydari.
+                      use. My supervisor was Dr. Heydari.
                     </p>
                   </div>
                 </div>
@@ -338,11 +338,11 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>Kharazmi University</h4>
-                    <h4 class="subheading">Collision Stimulation</h4>
+                    <h4 class="subheading">Collision Simulation</h4>
                   </div>
                   <div class="timeline-body">
                     <p>
-                     Me and Two of my classmates, launch a collision stimulation of two partciles by using python in our applied computational physics class.
+                     Me and Two of my classmates launched a collision simulation of two particles by using Python in our applied computational physics class.
                     </p>
                   </div>
                 </div>
@@ -394,14 +394,14 @@
                   <div class="timeline-heading">
                     <h4>University Of Tehran</h4>
                     <h4 class="subheading">
-                      Master Degree of Particle Physics
+                      Master's Degree in Particle Physics
                     </h4>
                   </div>
                   <div class="timeline-body">
                     <p>
                       Particle Physics group at Physics Department of University
-                      Of tehran is one of the most credited succsessful groups
-                      in Middle east. I have the honor to work with Dr.hajar
+                      Of Tehran is one of the most credited successful groups
+                      in the Middle East. I have the honor of working with Dr. Hajar
                       ebrahim about quantum information theory
                     </p>
                   </div>
@@ -419,14 +419,14 @@
                   <div class="timeline-heading">
                     <h4>Khrazmi University</h4>
                     <h4 class="subheading">
-                      Bachelor Degree of Atomic and molecule Physics
+                      Bachelor's Degree in Atomic and molecule Physics
                     </h4>
                   </div>
                   <div class="timeline-body">
                     <p>
-                      I have studied atomic physics in 4 years of my bachlor
-                      physics at Kharazmi University.I have passed courses about
-                      Optics, Practical Optics,Plasma,Spectroscopy,laser and
+                      I have studied atomic physics for 4 years of my bachelor
+                      physics at Kharazmi University. I have passed courses about
+                      Optics, Practical Optics, Plasma, Spectroscopy, laser and
                       Other courses Related to my Subject degree. My average
                       grade was A.
                     </p>
@@ -448,10 +448,10 @@
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
-                      In My highschool years. I had the chance to particpate in
-                      Matheatics Olympiad of students In Iran, and also in
-                      Robotic Competition in Tehran.I got My diploma with
-                      average grade A .
+                      In My high school years. I had the chance to participate in
+                      Mathematics Olympiad of students In Iran, and also in
+                      Robotic Competition in Tehran. I got My diploma with
+                      average grade A.
                     </p>
                   </div>
                 </div>
