--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <p>
                 I graduated from the Kharazmi University of Tehran in 2019 with a
                 B.C in Atomic physics with a full scholarship. I was working with
-                Dr.Vahedi on Ads/CFT correspondence when I introduced to
+                Dr.Vahedi on quantum dynamics when I introduced to
                 entanglement and quantum information theory. I was wrestling for the
                 Kharazmi University team and won the silver medal in Greco-Roman
                 style wrestling in wrestling competitions at universities of
@@ -140,7 +140,7 @@
                 I became the 85th rank in the nationwide M.Sc. entrance exam in
                 2019. I was accepted at the particle physics department of the University of
                 Tehran with a full scholarship in 2019 and my average grade is
-                17.97/20 until the 4th semester. I am working with Dr.Ebrahim on
+                17.97/20 until the 4th semester. I obtain the chance to work with Dr.Ebrahim on
                 Quantum Information Exchange Between Subsystems by Ads/CFT
                 Correspondence. I started learning Mathematica, Python, HTML,
                 Javascript, CSS, and Nodejs in my free time and I do sports and
