--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 I became the 85th rank in the nationwide M.Sc. entrance exam in
                 2019. I was accepted at the particle physics department of the University of
                 Tehran with a full scholarship in 2019 and my average grade is
-                17.97/20 until the 4th semester. I obtain the chance to work with Dr.Ebrahim on
+                17.97/20 until the 4th semester. I obtained the chance to work with Dr.Ebrahim on
                 Quantum Information Exchange Between Subsystems by Ads/CFT
                 Correspondence. I started learning Mathematica, Python, HTML,
                 Javascript, CSS, and Nodejs in my free time and I do sports and
